ec2-dotnet-stack.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: >
  CloudFormation template to deploy an EC2 instance ready for a .NET project on AWS.

Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access
    Type: AWS::EC2::KeyPair::KeyName

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      Tags:
        - Key: Name
          Value: DotNetVPC

  Subnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: DotNetSubnet

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  Route:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet
      RouteTableId: !Ref RouteTable

  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH and port 5000 for .NET
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 5000
          ToPort: 5000
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0

  DotNetInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      SubnetId: !Ref Subnet
      SecurityGroupIds:
        - !Ref InstanceSecurityGroup
      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", AMI]
      Tags:
        - Key: Name
          Value: DotNetAppServer
      UserData: 
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          rpm -Uvh https://packages.microsoft.com/config/centos/7/packages-microsoft-prod.rpm
          yum install -y dotnet-sdk-8.0 aspnetcore-runtime-8.0
          # Here you could add commands to download and run your .NET app
          # Example:
          # git clone <your-repo-url> /home/ec2-user/app
          # cd /home/ec2-user/app
          # dotnet run --urls "http://0.0.0.0:5000"

Mappings:
  RegionMap:
    us-east-1:
      AMI: ami-051f8a213df8bc089
    us-east-2:
      AMI: ami-0d406e26e5ad4de53
    us-west-1:
      AMI: ami-0cbd40f694b804622
    us-west-2:
      AMI: ami-0a70b9d193ae8a799
    eu-west-1:
      AMI: ami-03a6eaae9938c858c
    eu-central-1:
      AMI: ami-0e4b5d32d3f8bcfb0

Outputs:
  InstancePublicIp:
    Description: Public IP of the EC2 instance
    Value: !GetAtt DotNetInstance.PublicIp
